force-app/main/default/objects/CampaignMember/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agenzia Teleseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>