force-app/main/default/objects/CampaignMember/fields/ContactLeadAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactLeadAddress__c</fullName>
    <formula>IF(LeadId = NULL, Contact.MailingAddressFormula__c, &apos;&apos;)
/*Lead.StreetName__c &amp;&apos; &apos;&amp; Lead.StreetNumber__c &amp;&apos;&apos;&amp; Lead.StreetNumberExtension__c &amp;&apos;, &apos;&amp; Lead.City &amp;&apos; &apos;&amp; Lead.State &amp;&apos;, &apos;&amp; Lead.CityCode__c &amp;&apos; &apos;&amp; Lead.Country*/</formula>
    <label>Indirizzo Contact/Lead</label>
    <type>Text</type>
</CustomField>