force-app/main/default/objects/CampaignMember/fields/ContractReference__c.field-meta.xml
<CustomField>
    <fullName>ContractReference__c</fullName>
    <description>Valorizzabile dall’utente Marketing Cloud con tutti gli identificativi dei Contratti dello stesso Contatto che si vogliono inserire nel Target. Se il campo è vuoto il CRM interpreta come Target tutti i contratti legati al Contatto.</description>
    <label>Riferimento Contratti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>