force-app/main/default/objects/CampaignMember/fields/Ecid__c.field-meta.xml
<CustomField>
    <fullName>ECID__c</fullName>
    <label>ECID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>