force-app/main/default/objects/CampaignMember/fields/ExcludeFub__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFub__c</fullName>
     <description>Determina se la numerazione indicata in “Numero telefonico”  deve essere oggetto o meno di verifica FUB. Da processo standard viene valorizzato dall’utente Marketing Cloud</description>
    <label>Escludi Fub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>