force-app/main/default/objects/CampaignMember/fields/FinalStateChannel__c.field-meta.xml
<CustomField>
    <fullName>FinalStateChannel__c</fullName>
    <label>Canale Stato Finale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>