force-app/main/default/objects/CampaignMember/fields/FinalStateUser__c.field-meta.xml
<CustomField>
    <fullName>FinalStateUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo gestito in automatico dal CRM, indica l’utente che ha aggiornamento il campo Stato con un valore finale (campo Responded)</description>
    <label>Utente Stato Finale</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CampaignMembersFinalState</relationshipName>
    <type>Lookup</type>
</CustomField>