force-app/main/default/objects/CampaignMember/fields/GenericField18__c.field-meta.xml
<CustomField>
    <fullName>GenericField18__c</fullName>
    <description>Campo testo libero valorizzato dall&apos;utente durante il targeting. Utilizzato per comunicare info puntuali all’Operatore o per indirizzare il comportamento degli Script in funzione del valore dei campi.</description>
    <label>Campo 18</label>
    <length>255</length>
    <type>Text</type>
</CustomField>