force-app/main/default/objects/CampaignMember/fields/IBMUnicaAgency__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaAgency__c</fullName>
    <label>Agenzia IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>