force-app/main/default/objects/CampaignMember/fields/IBMUnicaAppointmentTime__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaAppointmentTime__c</fullName>
    <label>Ora Appuntamento IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>