force-app/main/default/objects/CampaignMember/fields/IBMUnicaBonusVas1__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaBonusVas1__c</fullName>
    <label>Bonus VAS 1 IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>