force-app/main/default/objects/CampaignMember/fields/IBMUnicaChannel__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaChannel__c</fullName>
    <description>Campi valorizzati da Mulesoft per gestire lo scenario dei Clienti Non migrati, durante il periodo transitorio</description>
    <label>CANALE IBM Unica</label>
    <length>32</length>
    <type>Text</type>
</CustomField>