force-app/main/default/objects/CampaignMember/fields/IBMUnicaClientType__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaClientType__c</fullName>
    <label>Tipologia Cliente IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>