force-app/main/default/objects/CampaignMember/fields/IBMUnicaCommercialOffer__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaCommercialOffer__c</fullName>
    <label>Offerta Commerciale IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>