force-app/main/default/objects/CampaignMember/fields/IBMUnicaCommercialOfferEle__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaCommercialOfferEle__c</fullName>
    <label>Offerta Commerciale EE IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>