force-app/main/default/objects/CampaignMember/fields/IBMUnicaCurrentSupplierGas__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaCurrentSupplierGas__c</fullName>
    <label>Attuale Fornitore GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>