force-app/main/default/objects/CampaignMember/fields/IBMUnicaCustomerId__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaCustomerId__c</fullName>
    <description>Campi valorizzati da Mulesoft per gestire lo scenario dei Clienti Non migrati, durante il periodo transitorio</description>
    <label>CUSTOMERID IBM Unica</label>
    <length>19</length>
    <type>Text</type>
</CustomField>