force-app/main/default/objects/CampaignMember/fields/IBMUnicaDispensingCompanyGas__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaDispensingCompanyGas__c</fullName>
    <label>Società erogatrice GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>