force-app/main/default/objects/CampaignMember/fields/IBMUnicaEle__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaEle__c</fullName>
    <label>EE IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>