force-app/main/default/objects/CampaignMember/fields/IBMUnicaEmailLeb__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaEmailLeb__c</fullName>
    <label>Email Ieb IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>