force-app/main/default/objects/CampaignMember/fields/IBMUnicaNote1__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaNote1__c</fullName>
    <description>Campi valorizzati da Mulesoft per gestire lo scenario dei Clienti Non migrati, durante il periodo transitorio</description>
    <label>NOTE_1 IBM Unica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>