force-app/main/default/objects/CampaignMember/fields/IBMUnicaOrigin__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaOrigin__c</fullName>
    <label>Provenienza IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>