force-app/main/default/objects/CampaignMember/fields/IBMUnicaOriginMarketGas__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaOriginMarketGas__c</fullName>
    <label>Mercato di provenienza GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>