force-app/main/default/objects/CampaignMember/fields/IBMUnicaPDR__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaPDR__c</fullName>
    <label>Pdr IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>