force-app/main/default/objects/CampaignMember/fields/IBMUnicaPOD__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaPOD__c</fullName>
    <label>Pod IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>