force-app/main/default/objects/CampaignMember/fields/IBMUnicaProposalOffer__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaProposalOffer__c</fullName>
    <label>Proposizione Offerta IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>