force-app/main/default/objects/CampaignMember/fields/IBMUnicaRdo__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaRdo__c</fullName>
    <label>RDO IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>