force-app/main/default/objects/CampaignMember/fields/IBMUnicaRdsTopic__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaRdsTopic__c</fullName>
    <label>Argomento Rds IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>