force-app/main/default/objects/CampaignMember/fields/IBMUnicaRdsType__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaRdsType__c</fullName>
    <label>Tipo Rds IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>