force-app/main/default/objects/CampaignMember/fields/IBMUnicaReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaReceivedDate__c</fullName>
    <label>Data Ricevimento Rds IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>