force-app/main/default/objects/CampaignMember/fields/IBMUnicaSendingBillMode__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSendingBillMode__c</fullName>
    <label>Modalità invio bolletta IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>