force-app/main/default/objects/CampaignMember/fields/IBMUnicaSendingElectronicBill__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSendingElectronicBill__c</fullName>
    <label>Invio bolletta elettronica IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>