force-app/main/default/objects/CampaignMember/fields/IBMUnicaShipmentCity__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaShipmentCity__c</fullName>
    <label>Comune Spedizione IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>