force-app/main/default/objects/CampaignMember/fields/IBMUnicaShipmentPostalCode__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaShipmentPostalCode__c</fullName>
    <label>CAP Spedizione IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>