force-app/main/default/objects/CampaignMember/fields/IBMUnicaShipmentState__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaShipmentState__c</fullName>
    <label>Provincia Spedizione IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>