force-app/main/default/objects/CampaignMember/fields/IBMUnicaShipmentStreetNum__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaShipmentStreetNum__c</fullName>
    <label>Civico Spedizione IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>