force-app/main/default/objects/CampaignMember/fields/IBMUnicaStartDate__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaStartDate__c</fullName>
    <label>Data partenza EE GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>