force-app/main/default/objects/CampaignMember/fields/IBMUnicaState__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaState__c</fullName>
    <label>Provincia IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>