force-app/main/default/objects/CampaignMember/fields/IBMUnicaStreetNum__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaStreetNum__c</fullName>
    <label>Civico IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>