force-app/main/default/objects/CampaignMember/fields/IBMUnicaSupplyEleState__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSupplyEleState__c</fullName>
    <label>Provincia fornitura EE IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>