force-app/main/default/objects/CampaignMember/fields/IBMUnicaSupplyGasCity__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSupplyGasCity__c</fullName>
    <label>comune fornitura GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>