force-app/main/default/objects/CampaignMember/fields/IBMUnicaSupplyGasPostalCode__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSupplyGasPostalCode__c</fullName>
    <label>cap fornitura GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>