force-app/main/default/objects/CampaignMember/fields/IBMUnicaSupplyGasState__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSupplyGasState__c</fullName>
    <label>Provincia fornitura GAS IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>