force-app/main/default/objects/CampaignMember/fields/IBMUnicaSystemEle__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaSystemEle__c</fullName>
    <label>Impianto EE IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>