force-app/main/default/objects/CampaignMember/fields/IBMUnicaVasOffer2__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaVasOffer2__c</fullName>
    <label>Offerta VAS 2 IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>