force-app/main/default/objects/CampaignMember/fields/IBMUnicaVoDate__c.field-meta.xml
<CustomField>
    <fullName>IBMUnicaVoDate__c</fullName>
    <label>Data VO IBM Unica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>