force-app/main/default/objects/CampaignMember/fields/isToSendStatusReitek__c.field-meta.xml
<CustomField>
    <fullName>isToSendStatusReitek__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isToSendStatusReitek</label>
    <type>Checkbox</type>
</CustomField>