force-app/main/default/objects/CampaignMember/fields/isWsBollettaInvoked__c.field-meta.xml
<CustomField>
    <fullName>isWsBollettaInvoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WS Bolletta Invoked</label>
    <type>Checkbox</type>
</CustomField>