force-app/main/default/objects/CampaignMember/fields/NumberingValidityEndDate__c.field-meta.xml
<CustomField>
    <fullName>NumberingValidityEndDate__c</fullName>
    <description>Data oltre la quale la chiamata non deve essere effettuata. Da processo standard il campo viene valorizzato dall’utente Marketing Cloud</description>
    <label>Data fine validità numerazione</label>
    <type>Date</type>
</CustomField>