force-app/main/default/objects/CampaignMember/fields/NumberingValidityStartDate__c.field-meta.xml
<CustomField>
    <fullName>NumberingValidityStartDate__c</fullName>
    <label>Data Inizio Validità Numerazione</label>
    <type>Date</type>
</CustomField>