force-app/main/default/objects/CampaignMember/fields/OutcomeDateFub__c.field-meta.xml
<CustomField>
    <fullName>OutcomeDateFub__c</fullName>
    <description>Campo gestito in automatico dal sistema;</description>
    <label>Data Esito FUB</label>
    <type>Date</type>
</CustomField>