force-app/main/default/objects/CampaignMember/fields/OutcomeFub__c.field-meta.xml
<CustomField>
    <fullName>OutcomeFub__c</fullName>
    <description>Campo gestito in automatico dal sistema;</description>
    <label>Esito FUB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_OkKo</valueSetName>
    </valueSet>
</CustomField>