force-app/main/default/objects/CampaignMember/fields/PaperProcess__c.field-meta.xml
<CustomField>
    <fullName>PaperProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chiave di tracciamento per la gestione del Canale Cartaceo, il campo è gestito in automatico dal CRM.</description>
    <label>Lavorazione Cartacea</label>
    <referenceTo>PaperProcessing__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>