force-app/main/default/objects/CampaignMember/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Contiene il numero telefonico da chiamare durante l’erogazione delle Campagne Outbound con canale Telefonico. Da processo standard viene valorizzato dall’utente Marketing Cloud</description>
    <label>Numero telefonico</label>
    <type>Phone</type>
</CustomField>