force-app/main/default/objects/CampaignMember/fields/PromoCommercialCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCommercialCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con l’oggetto che definisce i codici commerciali. Il campo è gestito in automatico dal sistema e non è editabile dall’utente</description>
    <label>Codice Commerciale</label>
    <referenceTo>CommercialCode__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>