force-app/main/default/objects/CampaignMember/fields/RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>RegistrationDate__c</fullName>
    <label>Data Registrazione</label>
    <type>Date</type>
</CustomField>