force-app/main/default/objects/CampaignMember/fields/reitekAgentUserId__c.field-meta.xml
<CustomField>
    <fullName>reitekAgentUserId__c</fullName>
    <label>reitekAgentUserId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>