force-app/main/default/objects/CampaignMember/fields/RelatedActivity__c.field-meta.xml
<CustomField>
    <fullName>RelatedActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con l’oggetto Activity (PClick), gestito dal sistema, utilizzato per Quality/Comfort Call. Se presente, lega il Campaign Member all’Activity.</description>
    <label>Related Activity</label>
    <referenceTo>wrts_prcgvr__Activity__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>