force-app/main/default/objects/CampaignMember/fields/ResultCategory__c.field-meta.xml
<CustomField>
    <fullName>ResultCategory__c</fullName>
    <description>Campo calcolato derivato dallo stato</description>
    <label>Categoria Esito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>