force-app/main/default/objects/CampaignMember/fields/ResultType__c.field-meta.xml
<CustomField>
    <fullName>ResultType__c</fullName>
    <description>Campo calcolato derivato dallo stato.</description>
    <label>Tipo Esito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>