force-app/main/default/objects/CampaignMember/fields/SurveyResponse__c.field-meta.xml
<CustomField>
    <fullName>SurveyResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>SurveyResponse__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>CampaignMembers</relationshipName>
    <type>Lookup</type>
</CustomField>