force-app/main/default/objects/CampaignMember/fields/SurveyResponseTracking__c.field-meta.xml
<CustomField>
    <fullName>SurveyResponseTracking__c</fullName>
    <label>Risposta Survey</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>